<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>vesc_driver</name>
    <version>1.0.0</version>
    <description>
    ROS device driver for VESC open source motor driver.
  </description>
    <maintainer email="SBGRP-git@g.softbank.co.jp">SoftBank Corp.</maintainer>
    <author email="boulet@ll.mit.edu">Michael T. Boulet</author>
    <author email="yuki.st16@gmail.com">Yuki Onishi</author>
    <license>Apache 2.0</license>

    <!-- <depend>nodelet</depend> -->
    <!-- <depend>pluginlib</depend> -->

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>rclcpp_components</depend>
    <depend>std_msgs</depend>
    <depend>vesc_msgs</depend>
    <depend>serial</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
